--- a/templates/index.html
+++ b/templates/index.html
@@ -107,7 +107,7 @@
                 </button>
             </div>
             <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
-                Avish Tripathi © 2021 Copyright
+                Animesh Kaushik © 2022 Copyright
             </div>
         </footer>
     </section>
