--- a/templates/index.html
+++ b/templates/index.html
@@ -17,7 +17,6 @@
 </head>
 
 <body>
-    <!-- Navbar -->
     <section class="navigation-section">
         <nav class="navbar navbar-expand-lg navbar-light bg-light navigation-color">
             <div class="container-fluid">
@@ -42,26 +41,40 @@
             </div>
         </nav>
     </section>
-    <!-- Introduction -->
     <section class="main-section" id="home">
-        <div class=" intro">
-            <h1><span style="color:#e0501b;font-size: 8rem;">S</span>TEP AHEAD WITH FUTURE RATING</h1>
-            <a href="{{ url_for('predict')}}"><button type="button" class="btn btn-outline-light button">Predict</button></a>
+        <div class="row">
+
+            <div class="col-lg-6 intro">
+                <h1><span style="color:#e0501b;font-size: 7vw;">S</span>TEP AHEAD WITH FUTURE RATING
+                </h1>
+                <h5>Wondering about what will be your upcoming rating ? This website is there for you to know your
+                    upcoming rating ! Just click the Predict button and get started.
+                </h5>
+                <a href="{{ url_for('predict')}}"><button type="button"
+                        class="btn btn-outline-danger button">Predict</button></a>
+            </div>
+            <div class="col-lg-6 photo">
+            </div>
         </div>
     </section>
-    <!-- About section -->
     <section class="about-section" id="about">
         <div class="container">
-            <h1 style="padding: 40px 0; font-size: 60px;">About</h1>
-            <p style="font-size: 24px;">
-                A huge amount of nerve cells die every time when one think what could be his/her future rating in the
-                upcoming contests. With the objective of providing the future rating of the user so he can practice more and improve his performance, this application is developed & deployed. Codeforces is a website that hosts competitive programming contests. This platform is typically used when preparing for competitive programming contests and provides many features. A user is expected to have an account with a decent rating to use this platform. 
+            <h1 style="padding: 40px 0;">About The Project</h1>
+            <p style="font-size: larger;">
+                A huge amount of your nerve cells die every time when you think what will be your future rating in the
+                upcoming contests. Stop this! From now you could use this service, it calculates approximate upcoming
+                rating
+                for every contestant.
+                This Project mainly consists of 3 Parts: Firstly, takes username as an input from the user. Then the
+                next step is to fetch the details of the user from codeforcesAPI and uses this information as input for
+                our ML model.Then the final step is predict the future rating and display it along with all the
+                necessary information extracted from codforcesAPI.
             </p>
         </div>
-    <!-- Steps section -->
+
     </section>
     <section class="cards-section">
-        <h1 style="font-size: 60px; text-align: center; color: rgb(227, 216, 216);">Steps</h1>
+        <h1 style="font-size: 60px; text-align: center; color: darkred;">Steps</h1>
         <div class="row">
             <div class="col-lg-4">
                 <div class="card">
@@ -88,28 +101,35 @@
                 </div>
             </div>
         </div>
+
     </section>
-    <!-- Footer section -->
     <section class="footer-section">
-        <footer class="text-center text-lg-start" style="background-color: rgb(12, 10, 75);">
+        <!-- Remove the container if you want to extend the Footer to full width. -->
+
+        <footer class="text-center text-lg-start" style="background-color: black;">
             <div class="container d-flex justify-content-center py-5">
-                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
+                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: black;">
                     <i class="fab fa-facebook-f"></i>
                 </button>
-                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
+                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: black;">
                     <i class="fab fa-youtube"></i>
                 </button>
-                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
+                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: black;">
                     <i class="fab fa-instagram"></i>
                 </button>
-                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2">
+                <button type="button" class="btn btn-primary btn-lg btn-floating mx-2" style="background-color: black;">
                     <i class="fab fa-twitter"></i>
                 </button>
             </div>
+
+            <!-- Copyright -->
             <div class="text-center text-white p-3" style="background-color: rgba(0, 0, 0, 0.2);">
                 Animesh Kaushik © 2022 Copyright
             </div>
+            <!-- Copyright -->
         </footer>
+
+        <!-- End of .container -->
     </section>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
