--- a/templates/Predict.html
+++ b/templates/Predict.html
@@ -20,13 +20,13 @@
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-size: 1.5rem;
     }
+
     .handle {
         color: purple;
     }
 </style>
 
-<body style="background-image: -webkit-linear-gradient(0deg, white 15%,#568ded 90%) !important;">
-    <!-- Navigation Bar -->
+<body>
     <section class="navigation-section">
         <nav class="navbar navbar-expand-lg navbar-light bg-light navigation-color">
             <div class="container-fluid">
@@ -40,24 +40,29 @@
                         <li class="nav-item">
                             <a class="nav-link" aria-current="page" href="{{ url_for('main')}}">Home</a>
                         </li>
+                        <!-- <li class="nav-item">
+                            <a class="nav-link" href="">About</a>
+                        </li> -->
+                        <!-- <li class="nav-item">
+                            <a class="nav-link" href="#">Predict</a>
+                        </li> -->
                     </ul>
                 </div>
             </div>
         </nav>
     </section>
-    <!-- Predict Section -->
     <section class="form">
         <form action="/predict" method="post">
+            <!-- <label for="UserHandle">Enter UserHandle: </label> -->
             <input type="text" placeholder="Codeforces UserHandle" name="handle">
+            <!-- <button type="submit">submit</button> -->
         </form>
     </section>
     <div class="text">
-        <!-- User not found -->
         {% if name=='failed' %}
-        <h1>Handle Not Found!</h1>
-        <!-- Solved 0 problems and contests -->
+        <h1>Handle Not Found!!</h1>
         {% elif problems==0 and name!='' %}
-        <h1>Not solved any problem yet!</h1>
+        <h1>Useless People</h1>
         {% elif name!='' %}
         <h1 class="handle">{{name}}</h1>
         <div class="container">
@@ -75,13 +80,10 @@
                 </div>
             </div>
         </div>
-        <h3>Your future rating may be</h3>
+        <h3>Your Future Rating May Be</h3>
         <h1 style="color: brown;">{{ans}}</h1>
         {% endif %}
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-/bQdsTh/da6pkI1MST/rWKFNjaCP5gBSY4sEBT38Q/9RBh9AH40zEOg7Hlq2THRZ"
-        crossorigin="anonymous"></script>
 </body>
 
 </html>
