--- a/static/styles.css
+++ b/static/styles.css
@@ -1,15 +1,22 @@
+body{
+    /* background-image: -webkit-linear-gradient(0deg, white 15%,#C1FFD7 90%); */
+    
+}
 .navigation-color{
     background-color: #fff !important;
+    /* border-bottom-left-radius: 25px; */
+    /* border-bottom-right-radius: 25px; */
     box-shadow: 0 19px 38px rgba(0, 0, 0, 0.521);
+    /* position: fixed; */
+    /* width: 100%; */
+    /* z-index: 1; */
 
 }
 .main-section{
-    background: rgba(0, 0, 0, 0.5) url("https://wallpaperaccess.com/full/3239444.jpg");
+    background-image: url("https://cdn.dribbble.com/users/149180/screenshots/3137225/particles.gif");
+    /* background-attachment: fixed; */
     background-repeat: no-repeat;
     background-size: cover;
-    justify-content: center;
-    align-self: center; 
-    background-blend-mode: darken;
 }
 .container-fluid{
     padding: 0em 20em;
@@ -27,21 +34,32 @@
 .nav-link:hover{
     color: blue !important;
 }
-.main-section .intro{
-    height: 40em;
-    display: block;
-    justify-items: center;
-    text-align: center;
+.photo{
+    height: 100%;
+    background-image: url("rating-image.png");
+    z-index: 0;
+    background-repeat: no-repeat;
+    background-size: 100%;
+    /* border: solid; */
+    padding: 0px;
+    margin: 0;
+    height: 600px;
+}
+.intro{
+    margin: auto;
+    padding: 50px;
+    /* border: solid; */
+    padding-left: 55px;
 }
 .intro h1{
-    padding-top: 12%;
     font-weight: 400;
-    font-size: 3.4rem;
-    color: rgb(255, 255, 255);
+}
+.row{
+    padding: 40px 0;
+    margin: 0;
 }
 .button{
     justify-content: center;
-    align-self: center !important;
     align-items: center;
     padding: 15px 60px;
     font-size: 1.3em;
@@ -50,13 +68,10 @@
 }
 
 .about-section{
-    background-image: -webkit-linear-gradient(0deg, white 10%,#6808c8 90%); 
-    padding-top: 8em;
-    height: 40em;
-    display: block;
-    justify-items: center;
+    /* background-color: black; */
+    background-image: -webkit-linear-gradient(0deg, white 15%,#FFF9B2 90%); 
+    padding: 30px;
     text-align: center;
-    color: rgb(65, 43, 43);
 }
 .form{
     padding: 0 25em;
@@ -73,15 +88,16 @@
     outline: none;
 }
 .card{
-    margin: 18px;
-    background-color: transparent;
+    margin: 8px;
+    /* padding: 20px 0; */
+    box-shadow: 10px 18px 15px rgba(0, 0, 0, 0.185);
 }
 .card-img-top{
     /* align-items: center; */
     align-self: center;
     /* justify-content: center; */
-    width: 48%;
-    height: 280px;
+    width: 50%;
+    height: 300px;
 }
 .card-text{
     text-align: center;
@@ -89,11 +105,10 @@
     padding-top: 50px;
     font-weight: 500;
     font-size: 30px;
-    color: white;
 }
 .cards-section{
-    padding-top: 25px;
-    background-color:#423c9e ;
+    padding-top: 20px;
+    background-color:#ffce63 ;
 }
 @media screen and (max-width:770px){
     .container-fluid{
@@ -110,11 +125,17 @@
     .navbar-toggler{
         margin-right: 10px !important;
     }
-    .intro h1{
-        font-size: 2em;
+    .intro h5{
+        font-size: 1em;
+    }
+    .photo{
+        height: 400px;
     }
     .button{
         padding: 15px 45px;
+    }
+    .container h1{
+        font-size: 250%;
     }
     .container p{
         font-size: 15px;
